2017-06-30 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Working on TTHFITTER-137, extended chi2 test for pre-/post-fit plots added
    
2017-06-28 Michele Pinamonti <michele.pinamonti@gmail.com>
    * MergeSystematics moved before syst symmetrisation
    * Fixes TTHFITTER-135
    
2017-06-23 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fix memory issue when too many histograms are readed from file (calling "TH1::AddDirectory(kFALSE);" if no writing is involved)
    * goodness of fit added - need flag GetGoodnessOfFit set to TRUE under Fit
    * PreSmoothing for systematics added (can be combined or not with normal smoothing)
    * Various fixes on multiplication/division of sampes and propagation of systematics in this case
    * Various small fixes
    
2017-06-12 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fix of DropBins functionality
    * Fix of post-fit plots crash
    * Extension of CustomAsimov functionality (see README)
    
2017-06-09 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Implemented random POI scaling (closes TTHFITTER-134)
    * fixes
    
2017-06-08 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Implemented Custom Asimov (closes TTHFITTER-132)
    * Started to implement SHAPE systematics (working on TTHFITTER-120)
    * Implementing DropBins option (closes TTHFITTER-133)
    
2017-06-01 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Taking sum of signals for SignalRegions plot (closes TTHFITTER-130)
    * setting default ratio y min to 0.5 an max to 1.5
    
2017-05-31 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixing y-axis range (closes TTHFITTER-64)

2017-05-29 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Finally fixed the bug preventing S/B plots to show-up in eps format (fixes TTHFITTER-128)
    * Partially fixing memory leak in ranking (progressing on TTHFITTER-112)
    
2017-05-25 Michele Pinamonti <michele.pinamonti@gmail.com>